--- a/app/Resources/views/gt/index.html.twig
+++ b/app/Resources/views/gt/index.html.twig
@@ -13,7 +13,7 @@
         <div class="col-xs-6 col-md-4">
             <h1>Welcome to GradeTrader</h1>
             <p>We hope to make your stay as much educational and fun as possible</p>
-            <p><a class="btn btn-primary btn-lg" href="/gt/play" role="button">Start GrateTrader</a></p>
+            <p><a class="btn btn-primary btn-lg" href="/gt/play" role="button">Its me Mario!</a></p>
             <p><a class="btn btn-primary btn-lg" href="/tester/2" role="button">Julian & Paul & Justin</a></p>
         </div>
         <div class="col-xs-6 col-md-4"></div>
